Attempt to fix overlay scroll on iOS

--- a/style/scss/app.scss
+++ b/style/scss/app.scss
@@ -628,6 +628,7 @@ body,
 
 .overlay {
     position: fixed;
+    overflow: hidden;
     top: 0;
     left: 0;
     height: 100%;
